# flexboard-firmware

./: .gitignore  README.md  west.yml
IS31FL3733B/: CMakeLists.txt  prj.conf
IS31FL3733B/src/: main.c
boards/arm/flexboard/: Kconfig.board  Kconfig.defconfig  board.cmake  flexboard-pinctrl.dtsi  flexboard.dts  flexboard.dtsi  flexboard_cut.dts  flexboard_cut.yaml  flexboard_cut_defconfig  flexboard_full.dts  flexboard_full.yaml
boards/arm/flexeval/: Kconfig.board  Kconfig.defconfig  flexeval-pinctrl.dtsi  flexeval.dts  flexeval.yaml  flexeval_defconfig
bringup/: README.md
bringup/00_spin_blinky/: CMakeLists.txt  prj.conf
bringup/00_spin_blinky/src/: blinky.c  loop.S
bringup/01_blinky/: CMakeLists.txt  prj.conf
bringup/01_blinky/src/: loop.S  main.c
bringup/02_shell/: prj.conf
bringup/02_shell/src/: main.c
bringup/03_i2c_shell/: CMakeLists.txt  Kconfig  prj.conf
bringup/03_i2c_shell/boards/: flexboard.overlay
bringup/03_i2c_shell/src/: main.c
bringup/04_usb_cdc_acm/: CMakeLists.txt  Kconfig  prj.conf
demos/led_matrix/: CMakeLists.txt  Kconfig  README.md  prj.conf
demos/led_matrix/src/: main.c
demos/led_matrix/src/led_matrix/: Kconfig  led_matrix.c  led_matrix.h
demos/test/: Makefile  README.md  main.c
scripts/: flexboard_full_keydefs.csv  flexboard_keydefs.csv  keydefs_parse.py  pinlist.txt  pinlist_parse.py
zmk-config/: flexboard.conf  flexboard.keymap  flexboard.overlay  flexboard_cut.keymap  flexboard_full.conf  flexboard_full.keymap  flexboard_full.overlay  flexeval.conf  flexeval.keymap  flexeval.overlay
